--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,18 +40,15 @@
     <com.baoyz.widget.PullRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_favorite_talks"
+        android:layout_above="@+id/btn_register">
 
         <ListView
             android:id="@+id/list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawSelectorOnTop="false"
-            android:layout_below="@+id/swipeRefreshLayout" />
-
-
-
+            android:drawSelectorOnTop="false" />
     </com.baoyz.widget.PullRefreshLayout>
 
     <Button
@@ -64,6 +61,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
 
 </RelativeLayout>
