--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -9,29 +10,48 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:id="@+id/main_activity">
+    android:id="@+id/main_activity"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/iv_bio_logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:src="@drawable/bio_logo"
-        android:contentDescription="@string/app_name"/>
+        android:contentDescription="@string/app_name"
+        android:layout_gravity="center_horizontal" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:weightSum="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
+            <mehdi.sakout.fancybuttons.FancyButton
+                android:id="@+id/btn_current_talks"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:layout_marginRight="10dp"
+                android:padding="10dp"
+                fancy:defaultColor="#007ee5"
+                fancy:focusColor="#313131"
+                fancy:iconResource="@drawable/ic_keynote"
+                fancy:radius="30dp"
+                android:layout_gravity="right">
+            </mehdi.sakout.fancybuttons.FancyButton>
 
             <mehdi.sakout.fancybuttons.FancyButton
                 android:id="@+id/btn_favourite_talks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0"
                 android:layout_marginRight="10dp"
                 android:padding="10dp"
                 fancy:defaultColor="#007ee5"
@@ -40,55 +60,32 @@
                 fancy:radius="30dp">
             </mehdi.sakout.fancybuttons.FancyButton>
 
-        <mehdi.sakout.fancybuttons.FancyButton
-            android:id="@+id/btn_current_talks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:padding="10dp"
-            fancy:defaultColor="#007ee5"
-            fancy:focusColor="#313131"
-            fancy:iconResource="@drawable/ic_keynote"
-            fancy:radius="30dp">
-        </mehdi.sakout.fancybuttons.FancyButton>
+            <!--<mehdi.sakout.fancybuttons.FancyButton-->
+                <!--android:id="@+id/btn_register"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="0"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:padding="10dp"-->
+                <!--fancy:defaultColor="#007ee5"-->
+                <!--fancy:focusColor="#313131"-->
+                <!--fancy:iconResource="@drawable/ic_star"-->
+                <!--fancy:radius="30dp">-->
+            <!--</mehdi.sakout.fancybuttons.FancyButton>-->
+
+        </LinearLayout>
 
         <com.baoyz.widget.PullRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_favourite_talks"
-            android:layout_above="@+id/btn_register">
+            android:layout_weight="0.2">
 
             <ListView
                 android:id="@+id/list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawSelectorOnTop="false" />
+                android:drawSelectorOnTop="false"/>
         </com.baoyz.widget.PullRefreshLayout>
-
-
-        <mehdi.sakout.fancybuttons.FancyButton
-            android:id="@+id/btn_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:paddingBottom="5dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:paddingTop="5dp"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            fancy:borderColor="#ffa800"
-            fancy:borderWidth="1dp"
-            fancy:defaultColor="#ffa800"
-            fancy:focusColor="#313131"
-            fancy:radius="30dp"
-            fancy:text="@string/action_register"
-            fancy:textColor="#FFFFFF" />
-    </LinearLayout>
 
 </LinearLayout>
