--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2015 Joaquim Ley
   ~ All rights reserved.
@@ -10,13 +11,17 @@
   ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <!-- List Row -->
-    <dimen name="name">16dp</dimen>
-    <dimen name="date">12dp</dimen>
-    <dimen name="description">12dp</dimen>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-</resources>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#FF0000" />
+        </shape>
+    </item>
+
+    <item android:left="20dp" android:right="5dp"  android:top="5dp" android:bottom="5dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#000000" />
+        </shape>
+    </item>
+</layer-list>
