--- a/app/src/main/res/layout/custom_list_row.xml
+++ b/app/src/main/res/layout/custom_list_row.xml
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/date"
         android:text="28/05/2015"
+        android:layout_marginRight="5dp"
         android:layout_alignTop="@+id/title"
         android:layout_alignEnd="@+id/description" />
 
