--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-~ Copyright (c) 2015 Joaquim Ley
-~ All rights reserved.
-~
-~ Redistribution, modification or use of source and binary forms are NOT allowed
-~ without permission. The name of Joaquim Ley, or joaquimley.com may not be used
-~ to endorse products derived without previous authorization.
-~ THIS SOFTWARE IS PROVIDED 'AS IS' AND WITHOUT ANY EXPRESS OR
-~ IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
-~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
--->
+  ~ Copyright (c) 2015 Joaquim Ley - www.joaquimley.com
+  ~ All rights reserved.
+  ~
+  ~ Redistribution, modification or use of source and binary forms are NOT allowed
+  ~ without permission. The name of Joaquim Ley, or joaquimley.com may not be used
+  ~ to endorse products derived without previous authorization.
+  ~ THIS SOFTWARE IS PROVIDED 'AS IS' AND WITHOUT ANY EXPRESS OR
+  ~ IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
+  ~ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+  -->
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_smaller_horizontal_margin"
+    android:paddingBottom="@dimen/activity_smaller_vertical_margin"
+    android:paddingLeft="@dimen/activity_smaller_horizontal_margin"
+    android:paddingRight="@dimen/activity_smaller_horizontal_margin"
     tools:context=".MainActivity"
     android:id="@+id/main_activity"
     android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/iv_intro"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/app_name"
-        android:layout_gravity="center_horizontal" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:weightSum="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right">
+    <include layout="@layout/custom_list_row"/>
 
-            <mehdi.sakout.fancybuttons.FancyButton
-                android:id="@+id/btn_current_talks"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:layout_marginRight="10dp"
-                android:padding="2dp"
-                fancy:defaultColor="#007ee5"
-                fancy:focusColor="#313131"
-                fancy:iconResource="@drawable/ic_keynote"
-                fancy:radius="30dp"
-                android:layout_gravity="right">
-            </mehdi.sakout.fancybuttons.FancyButton>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textView2" />
 
-            <mehdi.sakout.fancybuttons.FancyButton
-                android:id="@+id/btn_favourite_talks"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:layout_marginRight="10dp"
-                android:padding="2dp"
-                fancy:defaultColor="#007ee5"
-                fancy:focusColor="#313131"
-                fancy:iconResource="@drawable/ic_star"
-                fancy:radius="30dp">
-            </mehdi.sakout.fancybuttons.FancyButton>
+    <com.baoyz.widget.PullRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="0dp">
 
-        </LinearLayout>
-
-        <com.baoyz.widget.PullRefreshLayout
-            android:id="@+id/swipeRefreshLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp" >
-
-            <ListView
+        <ListView
                 android:id="@+id/list"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="260dp"
                 android:drawSelectorOnTop="false"/>
 
-        </com.baoyz.widget.PullRefreshLayout>
+    </com.baoyz.widget.PullRefreshLayout>
 
 </LinearLayout>
