--- a/app/src/main/res/layout/custom_list_row.xml
+++ b/app/src/main/res/layout/custom_list_row.xml
@@ -37,18 +37,6 @@
         android:textStyle="bold"
         android:paddingBottom="7dp" />
 
-
-    <!-- Date -->
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/date"
-        android:text="28/05/2015"
-        android:layout_marginRight="5dp"
-        android:layout_alignBottom="@+id/image"
-        android:layout_alignEnd="@+id/favorite" />
-
     <!-- Speaker -->
     <TextView
         android:id="@+id/speaker"
@@ -84,5 +72,28 @@
         android:textSize="@dimen/description"
         android:layout_below="@+id/speaker"
         android:layout_toEndOf="@+id/image" />
+
+    <!-- Date -->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="1dp"
+        android:paddingEnd="1dp"
+        android:weightSum="1"
+        android:layout_below="@+id/image"
+        android:layout_alignParentStart="true"
+        android:gravity="end">
+        <!--android:background="@color/list_row_date_color"-->
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/date"
+            android:text="28/05/2015 | 19:00 - 21:00" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
