--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,19 +13,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
-    <item android:id="@+id/action_checkin"
-        android:title="@string/action_check_in"
+    <item android:id="@+id/ic_menu_group"
+        android:title="@string/participants_list"
         android:orderInCategory="98"
         android:showAsAction="always"
-        android:icon="@drawable/ic_action_person"/>
+        android:icon="@drawable/ic_action_group"/>
 
-    <item android:id="@+id/action_favorite"
+    <item android:id="@+id/ic_menu_favorite"
         android:title="@string/title_favorite"
         android:orderInCategory="99"
         android:showAsAction="always"
         android:icon="@drawable/ic_favorite_checkbox_selected"/>
 
-    <item android:id="@+id/action_keynote"
+    <item android:id="@+id/ic_menu_session"
         android:title="@string/title_keynote"
         android:orderInCategory="99"
         android:showAsAction="always"
