--- a/app/src/main/res/layout/activity_participants_list.xml
+++ b/app/src/main/res/layout/activity_participants_list.xml
@@ -25,55 +25,7 @@
     android:id="@+id/main_activity"
     android:weightSum="1">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/list_row_selector"
-        android:padding="0dp" >
-
-        <!-- Image -->
-        <ImageView
-            android:id="@+id/iv_user_pic"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:contentDescription="Picture" />
-
-        <!-- Name -->
-        <TextView
-            android:id="@+id/tv_user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/iv_user_pic"
-            android:layout_alignTop="@+id/iv_user_pic"
-            android:textSize="@dimen/title"
-            android:textStyle="bold"
-            android:paddingBottom="7dp" />
-
-        <!-- Email -->
-        <TextView
-            android:id="@+id/tv_user_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/speaker"
-            android:textStyle="bold"
-            android:paddingTop="1dp"
-            android:paddingBottom="1dp"
-            android:layout_below="@+id/tv_user_name"
-            android:layout_toEndOf="@+id/iv_user_pic" />
-
-        <!-- Description -->
-        <TextView
-            android:id="@+id/tv_user_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/description"
-            android:layout_below="@+id/tv_user_email"
-            android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@+id/iv_user_pic" />
-
-    </RelativeLayout>
+    <include layout="@layout/custom_participant_row"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -92,7 +44,7 @@
 
         <ListView
             android:id="@+id/list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawSelectorOnTop="false"/>
 
