--- a/app/src/main/res/layout/custom_user_row.xml
+++ b/app/src/main/res/layout/custom_user_row.xml
@@ -35,6 +35,7 @@
         android:focusableInTouchMode="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tv_details_name"
         android:layout_alignEnd="@+id/tv_user_description" />
 
     <!-- Name -->
@@ -65,6 +66,7 @@
         android:id="@+id/tv_user_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:textSize="@dimen/description"
         android:layout_below="@+id/tv_user_email"
         android:layout_alignParentEnd="true"
