--- a/app/src/main/res/layout/activity_participants_list.xml
+++ b/app/src/main/res/layout/activity_participants_list.xml
@@ -35,12 +35,12 @@
         android:text="@string/text_participants_list"
         android:id="@+id/tv_up_coming_sessions" />
 
-    <!--<com.baoyz.widget.PullRefreshLayout-->
-        <!--android:id="@+id/swipeRefreshLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="3dp"-->
-        <!--android:layout_marginBottom="0dp">-->
+    <com.baoyz.widget.PullRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="0dp">
 
         <ListView
             android:id="@+id/list"
@@ -48,6 +48,6 @@
             android:layout_height="match_parent"
             android:drawSelectorOnTop="false"/>
 
-    <!--</com.baoyz.widget.PullRefreshLayout>-->
+    </com.baoyz.widget.PullRefreshLayout>
 
 </LinearLayout>
