--- a/app/src/main/res/layout/activity_edit_user_details.xml
+++ b/app/src/main/res/layout/activity_edit_user_details.xml
@@ -11,116 +11,132 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.joaquimley.byinvitationonly.activities.EditUserDetailsActivity">
 
     <TextView
         android:id="@+id/tv_edit_details"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:textColor="#0D47A1"
-    android:text="@string/text_edit_details"  />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_edit_details"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#0D47A1" />
 
     <TextView
-    android:id="@+id/tv_details_name"
-    android:layout_marginTop="5dp"
-    android:text="@string/text_name"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/tv_edit_details"
-    android:layout_alignParentStart="true" />
+        android:id="@+id/tv_details_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_edit_details"
+        android:layout_marginTop="5dp"
+        android:text="@string/text_name" />
 
     <EditText
         android:id="@+id/et_edit_user_details_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/tv_details_name"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/tv_details_name"
+        android:ems="10"
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/tv_details_email"
-        android:text="@string/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/et_edit_user_details_name"
-        android:layout_alignParentStart="true" />
+        android:text="@string/email" />
 
     <EditText
         android:id="@+id/et_edit_user_details_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_details_email"
-        android:layout_alignParentStart="true" />
+        android:ems="10"
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/tv_details_description"
-        android:text="@string/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/et_edit_user_details_email"
-        android:layout_alignParentStart="true" />
+        android:text="@string/description" />
 
     <EditText
         android:id="@+id/et_edit_user_details_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:layout_below="@+id/tv_details_description"
+        android:layout_alignEnd="@+id/btn_cancel"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/btn_cancel" />
+        android:layout_below="@+id/tv_details_description"
+        android:ems="10"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/tv_details_photo_url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/et_edit_user_details_description"
+        android:text="@string/photo_url" />
+
+    <EditText
+        android:id="@+id/et_edit_user_details_photo_url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/btn_cancel"
+        android:layout_below="@+id/tv_details_photo_url"
+        android:ems="10"
+        android:inputType="textUri" />
+
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/btn_save"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/et_edit_user_details_photo_url"
+        android:layout_gravity="center_horizontal"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingTop="5dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
         fancy:borderColor="#838383"
         fancy:borderWidth="1dp"
         fancy:defaultColor="@color/action_bar_color"
         fancy:focusColor="@color/list_row_hover_start_color"
         fancy:radius="30dp"
         fancy:text="@string/text_save"
-        fancy:textColor="#FFFFFF"
-        android:layout_below="@+id/et_edit_user_details_description"
-        android:layout_alignParentStart="true" />
+        fancy:textColor="#FFFFFF" />
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/btn_cancel"
         android:layout_width="125dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/btn_save"
+        android:layout_gravity="center_horizontal"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingTop="5dp"
-        android:layout_gravity="center_horizontal"
         fancy:borderColor="#838383"
         fancy:borderWidth="1dp"
         fancy:defaultColor="@color/action_bar_color"
         fancy:focusColor="@color/list_row_hover_start_color"
         fancy:radius="30dp"
         fancy:text="@string/text_cancel"
-        fancy:textColor="#FFFFFF"
-        android:layout_alignTop="@+id/btn_save"
-        android:layout_alignParentEnd="true" />
-
+        fancy:textColor="#FFFFFF" />
 
 </RelativeLayout>
