user check-in implemented, minor layout fixes, other performance fixes

--- a/app/src/main/res/layout/custom_user_row.xml
+++ b/app/src/main/res/layout/custom_user_row.xml
@@ -24,7 +24,6 @@
         android:layout_height="90dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_marginTop="10dp"
         android:contentDescription="Picture" />
 
     <!-- Edit -->
@@ -35,19 +34,19 @@
         android:focusableInTouchMode="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_details_name"
-        android:layout_alignEnd="@+id/tv_user_description" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true" />
 
     <!-- Name -->
     <TextView
         android:id="@+id/tv_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/iv_user_pic"
-        android:layout_alignTop="@+id/iv_user_pic"
+        android:layout_marginTop="5dp"
         android:textSize="@dimen/title"
         android:textStyle="bold"
-        android:paddingBottom="7dp" />
+        android:paddingBottom="1dp"
+        android:layout_toEndOf="@+id/iv_user_pic" />
 
     <!-- Email -->
     <TextView
@@ -69,7 +68,6 @@
         android:layout_marginTop="3dp"
         android:textSize="@dimen/description"
         android:layout_below="@+id/tv_user_email"
-        android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/iv_user_pic" />
 
     <!-- Status data -->
@@ -82,6 +80,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/ib_user_status"
         android:layout_below="@+id/ib_user_edit"
-        android:layout_alignStart="@+id/ib_user_edit" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
