--- a/app/src/main/res/layout/activity_edit_user_details.xml
+++ b/app/src/main/res/layout/activity_edit_user_details.xml
@@ -29,12 +29,23 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#0D47A1" />
 
+    <ImageView
+        android:id="@+id/iv_profile_picture"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_below="@+id/tv_edit_details"
+        android:layout_marginTop="5dp"
+        android:layout_alignParentStart="false"
+        android:contentDescription="@string/text_user_profile_picture"
+        android:layout_alignParentEnd="false"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:id="@+id/tv_details_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tv_edit_details"
+        android:layout_below="@+id/iv_profile_picture"
         android:layout_marginTop="5dp"
         android:text="@string/text_name" />
 
@@ -46,7 +57,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_details_name"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName|textCapWords"/>
+
 
     <TextView
         android:id="@+id/tv_details_email"
@@ -81,24 +93,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tv_details_description"
         android:ems="10"
-        android:inputType="text" />
-
-    <TextView
-        android:id="@+id/tv_details_photo_url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/et_edit_user_details_description"
-        android:text="@string/photo_url" />
-
-    <EditText
-        android:id="@+id/et_edit_user_details_photo_url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/btn_cancel"
-        android:layout_below="@+id/tv_details_photo_url"
-        android:ems="10"
-        android:inputType="textUri" />
+        android:inputType="textCapWords|textMultiLine" />
 
 
     <mehdi.sakout.fancybuttons.FancyButton
@@ -106,8 +101,8 @@
         android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/et_edit_user_details_photo_url"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
@@ -118,7 +113,8 @@
         fancy:focusColor="@color/list_row_hover_start_color"
         fancy:radius="30dp"
         fancy:text="@string/text_save"
-        fancy:textColor="#FFFFFF" />
+        fancy:textColor="#FFFFFF"
+        android:layout_below="@+id/et_edit_user_details_description" />
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/btn_cancel"
@@ -127,6 +123,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/btn_save"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
