--- a/app/src/main/res/layout/custom_user_row.xml
+++ b/app/src/main/res/layout/custom_user_row.xml
@@ -29,7 +29,7 @@
     <!-- Edit -->
     <ImageButton
         android:id="@+id/ib_user_edit"
-        android:background="@drawable/ic_edit"
+        android:background="@drawable/ic_pencil"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_width="wrap_content"
