--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,6 +12,15 @@
   -->
 
 <resources>
-    <style name="AppTheme" parent="android:Theme.Material.Light">
-    </style>
+  <!--
+        Base application theme for API 21+. This theme replaces
+        MyTheme from res/values/styles.xml on API 21+ devices.
+    -->
+  <style name="CustomMaterialLikeTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <item name="android:windowContentTransitions">true</item>
+    <item name="android:windowAllowEnterTransitionOverlap">true</item>
+    <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
+    <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+  </style>
 </resources>
