--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,26 +12,17 @@
   -->
 
 <resources>
+    <!-- App Material like colors -->
     <color name="action_bar_color">#495f88</color>
+    <color name="primary_app_color">#2979FF</color>
+    <color name="dark_app_color">#2962FF</color>
+    <color name="accent_app_color">#00BCD4</color>
+
     <!-- List -->
-    <color name="list_divider">#495f88</color>
-    <color name="list_row_start_color">#2ca1cc</color>
-    <color name="list_row_end_color">#33B5E5</color>
-    <!--<color name="list_row_start_color">#33B5E5</color>-->
-    <!--<color name="list_row_end_color">#b4d4e0</color>-->
-    <color name="list_row_hover_start_color">#bcd2fb</color>
-    <color name="list_row_hover_end_color">#808897</color>
+    <color name="list_divider">@color/material_blue_grey_800</color>
+    <color name="list_row_start_color">@color/ripple_material_light</color>
+    <color name="list_row_end_color">#81D4FA</color>
+    <color name="list_row_hover_start_color">#29B6F6</color>
+    <color name="list_row_hover_end_color">#29B6F6</color>
     <color name="list_row_date_color">#a2acc0</color>
 </resources>
-
-<!-- Material Design Color Swatches per Google guidelines -->
-    <!--33B5E5-->
-    <!--AA66CC-->
-    <!--99CC00-->
-    <!--FFBB33-->
-    <!--FF4444-->
-    <!--0099CC-->
-    <!--9933CC-->
-    <!--669900-->
-    <!--FF8800-->
-    <!--CC0000-->
