--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,14 +12,17 @@
 
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Theme Customization -->
+    <style name="CustomMaterialLikeTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">true</item>
+        <item name="colorPrimary">@color/primary_app_color</item>
+        <item name="colorPrimaryDark">@color/dark_app_color</item>
+        <item name="colorAccent">@color/accent_app_color</item>
     </style>
 
-    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@color/action_bar_color</item>
+    <style name="MyActionBar" parent="ThemeOverlay.AppCompat.Light">
+    <item name="android:background">@color/action_bar_color</item>
     </style>
 
 </resources>
